[package]
name = "coult"
version = "0.1.1"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Hashicorp vault secret retrival helper, using hyper and serde, and automatically parsing."
homepage      = "https://github.com/guaychou/coult"
repository    = "https://github.com/guaychou/coult"
readme        = "README.md"
keywords      = ["vault", "tokio", "kubernetes"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
thiserror = "1.0.30"