[package]
name = "coult"
version = "0.3.0-test"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Hashicorp vault secret retrival helper, using hyper and serde, and automatically parsing."
homepage      = "https://github.com/guaychou/coult"
repository    = "https://github.com/guaychou/coult"
readme        = "README.md"
keywords      = ["vault", "tokio", "kubernetes"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
bytes = "1"
http-body-util = "0.1.3"
hyper = { version = "1"}
hyper-util = { version = "0.1", features = ["client", "http1", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http1", "tls12", "webpki-roots"] }
rustls = "0.23"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.3"
thiserror = "2"