[package]
name = "coult"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Hashicorp vault secret retrival helper, using hyper and serde, and automatically parsing."
homepage      = "https://github.com/guaychou/coult"
repository    = "https://github.com/guaychou/coult"
readme        = "README.md"
keywords      = ["vault", "tokio", "kubernetes"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
bytes = { version = "1", default-features= false}
http-body-util = { version = "0.1.3", default-features= false} 
hyper = { version = "1", default-features= false }
hyper-util = { version = "0.1", features = ["client", "http1", "tokio"], default-features= false }
hyper-rustls = { version = "0.27", features = ["http1", "tls12", "webpki-roots"]}
rustls = { version = "0.23", default-features= false }
tokio = { version = "1", features = ["time"], default-features= false }
serde = { version = "1.0", features = ["derive"], default-features= false}
serde_json = { version = "1.0", default-features= false, features = ["std"]}
tracing = {version = "0.1", default-features= false}
tracing-subscriber = {version = "0.3.3", default-features= false}
thiserror = { version = "2", default-features= false }